# advent-of-code

./: .gitignore  README.md  file_reader.py  pyproject.toml
2022/day2/: day2part1.py
2022/day3/: day3Part1.py
2022/day4/: day4Part2.py
day6/: day6part1.py
src/: utils.py
src/2022/day1/: day1Part2.py
src/2022/day10/: part1.py  part2.py
src/2022/day11/: part1.py  part2.py
src/2022/day12/: part1.py  part2.py
src/2022/day13/: part1.py  part2.py
src/2022/day3/: day3Part2.py
src/2022/day4/: day4Part1.py
src/2022/day5/: day5Part1.py
src/2022/day6/: day6Part2.py  day6part1.py
src/2022/day7/: day7part1.py  day7part2.py
src/2022/day8/: day8part1.py  day8part2.py
src/2022/day9/: day9part1.py  day9part2.py
src/2023/day_1/: run.py  test_run.py
src/2023/day_2/: run.py  test_run.py
src/2023/day_3/: run.py  test_run.py
src/2023/day_4/: run.py  test_run.py
src/2023/day_template/: run.py  test_run.py
