[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Dylan Pomeroy <dylan@dylanpomeroy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
